k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: web-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress              # <-- matches your deploy label
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
